# ci-matrix-demo

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: ci.yml
src/textutils/: __init__.py  core.py
tests/: test_core.py
