[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textutils"
description = "Small text-manipulation utilities"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff",
    "mypy",
    "build",
    "pre-commit",
    "detect-secrets>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/textutils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["textutils"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
